--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ The Singapore Government has launched a scheme where they will pay university st
 <hr>
 Please consider reviewing the applications of:
 <ul>
-  <li>the team presenting before us (<a href="">Team 4</a>)</li>
-  <li>the team presenting after us (<a href="">Team 6</a>)</li>
+  <li>the team presenting before us (<a href="http://kathyboey.github.io/is429-kathy-alex-feedback-fire/">Team 8</a>)</li>
+  <li>the team presenting after us (<a href="http://jolvanassignment1.s3-website-ap-southeast-1.amazonaws.com/">Team 10</a>)</li>
 </ul>
 
 </div>
